# Iris-File-Extension

./: .gitignore  CMakeLists.txt  LICENSE  MIGRATION.md  README.md
build-off/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/: slide_info_abstraction.cpp
schema/: ife_v1.json
src/: IFE_Array.hpp  IFE_Builder.cpp  IFE_Builder.hpp  IFE_DataBlock.hpp  IFE_Memory.cpp  IFE_Memory.hpp  IFE_Reflective.hpp  IFE_Types.hpp  IrisCodecExtension.cpp  IrisCodecExtension.hpp  IrisCodecFile.cpp  IrisCodecFile.hpp  IrisFileExtension.hpp  README.md
tests/: ife_accessors_tests.cpp  ife_array_tests.cpp  ife_codegen_tests.cpp  ife_datablock_tests.cpp  ife_memory_tests.cpp  ife_reflective_tests.cpp  ife_types_tests.cpp
tools/: ifc.py
